remove search icon

--- a/folioreader/res/menu/menu_main.xml
+++ b/folioreader/res/menu/menu_main.xml
@@ -11,12 +11,12 @@
         app:showAsAction="ifRoom"
         tools:showAsAction="always" />
 
-    <item
-        android:id="@+id/itemSearch"
-        android:icon="@drawable/ic_search"
-        android:title="@string/menu_item_search"
-        app:showAsAction="ifRoom"
-        tools:showAsAction="always" />
+<!--    <item-->
+<!--        android:id="@+id/itemSearch"-->
+<!--        android:icon="@drawable/ic_search"-->
+<!--        android:title="@string/menu_item_search"-->
+<!--        app:showAsAction="ifRoom"-->
+<!--        tools:showAsAction="always" />-->
 
     <item
         android:id="@+id/itemConfig"
