set epub render approach to horizontal, remove horizontal or vertical epub view option from epub settings

--- a/folioreader/res/layout/view_config.xml
+++ b/folioreader/res/layout/view_config.xml
@@ -100,30 +100,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_config_iv_label_font_small" />
 
-    <com.folioreader.util.StyleableTextView
-        android:id="@+id/buttonVertical"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:gravity="center"
-        android:text="@string/direction_vertical"
-        android:textSize="17sp"
-        app:folio_font="@string/lato_font"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonHorizontal"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view5" />
+<!--    <com.folioreader.util.StyleableTextView-->
+<!--        android:id="@+id/buttonVertical"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:gravity="center"-->
+<!--        android:text="@string/direction_vertical"-->
+<!--        android:textSize="17sp"-->
+<!--        app:folio_font="@string/lato_font"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toStartOf="@+id/buttonHorizontal"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/view5" />-->
 
-    <com.folioreader.util.StyleableTextView
-        android:id="@+id/buttonHorizontal"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:gravity="center"
-        android:text="@string/direction_horizontal"
-        android:textSize="17sp"
-        app:folio_font="@string/lato_font"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonVertical"
-        app:layout_constraintTop_toBottomOf="@+id/view5" />
+<!--    <com.folioreader.util.StyleableTextView-->
+<!--        android:id="@+id/buttonHorizontal"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:gravity="center"-->
+<!--        android:text="@string/direction_horizontal"-->
+<!--        android:textSize="17sp"-->
+<!--        app:folio_font="@string/lato_font"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/buttonVertical"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/view5" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
