--- a/folioreader/res/menu/menu_main.xml
+++ b/folioreader/res/menu/menu_main.xml
@@ -26,12 +26,12 @@
         tools:showAsAction="always" />
 
 
-    <item
-        android:id="@+id/itemTts"
-        android:icon="@drawable/man_speech_icon"
-        android:title="@string/menu_item_tts"
-        android:visible="false"
-        app:showAsAction="ifRoom"
-        tools:showAsAction="always" />
+<!--    <item-->
+<!--        android:id="@+id/itemTts"-->
+<!--        android:icon="@drawable/man_speech_icon"-->
+<!--        android:title="@string/menu_item_tts"-->
+<!--        android:visible="false"-->
+<!--        app:showAsAction="ifRoom"-->
+<!--        tools:showAsAction="always" />-->
 
 </menu>
