update ui of theme

--- a/folioreader/res/drawable/ic_baseline_bookmark_border_24.xml
+++ b/folioreader/res/drawable/ic_baseline_bookmark_border_24.xml
@@ -1,10 +1,13 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:autoMirrored="true"
-    android:viewportHeight="24.0"
-    android:viewportWidth="24.0">
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:fillColor="#FF71C951"
-      android:pathData="M17,3L7,3c-1.1,0 -1.99,0.9 -1.99,2L5,21l7,-3 7,3L19,5c0,-1.1 -0.9,-2 -2,-2zM17,18l-5,-2.18L7,18L7,5h10v13z"/>
+      android:pathData="M11.998,17.496L19.498,21.496V4.496C19.498,3.392 18.603,2.496 17.498,2.496H6.498C5.393,2.496 4.498,3.392 4.498,4.496V21.496L11.998,17.496Z"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#444444"
+      android:strokeLineCap="round"/>
 </vector>
