--- a/folioreader/res/layout/view_config.xml
+++ b/folioreader/res/layout/view_config.xml
@@ -7,25 +7,51 @@
     android:layout_height="203dp"
     tools:layout_gravity="bottom">
 
-    <ImageButton
-        android:id="@+id/view_config_ib_day_mode"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:background="@android:color/transparent"
-        app:layout_constraintEnd_toStartOf="@+id/view_config_ib_night_mode"
+    <!-- Row with Theme text and Switch -->
+    <TextView
+        android:id="@+id/theme_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enable Dark Mode"
+        android:textStyle="bold"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/icon_sun_sel"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/view3"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:paddingBottom="10.dp"/>
 
-    <ImageButton
-        android:id="@+id/view_config_ib_night_mode"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:background="@android:color/transparent"
+    <Switch
+        android:id="@+id/theme_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/view_config_ib_day_mode"
-        app:srcCompat="@drawable/icon_moon_sel"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/view3"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        android:paddingBottom="10.dp"/>
+
+    <!--    <ImageButton-->
+    <!--        android:id="@+id/view_config_ib_day_mode"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="50dp"-->
+    <!--        android:background="@android:color/transparent"-->
+    <!--        app:layout_constraintEnd_toStartOf="@+id/view_config_ib_night_mode"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:srcCompat="@drawable/icon_sun_sel"-->
+    <!--        tools:ignore="MissingConstraints" />-->
+
+    <!--    <ImageButton-->
+    <!--        android:id="@+id/view_config_ib_night_mode"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="50dp"-->
+    <!--        android:background="@android:color/transparent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toEndOf="@+id/view_config_ib_day_mode"-->
+    <!--        app:srcCompat="@drawable/icon_moon_sel"-->
+    <!--        tools:ignore="MissingConstraints" />-->
 
     <View
         android:id="@+id/view3"
@@ -34,23 +60,23 @@
         android:background="@color/grey_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_config_ib_night_mode" />
+        app:layout_constraintTop_toBottomOf="@+id/theme_switch" />
 
-<!--    <Spinner-->
-<!--        android:id="@+id/view_config_font_spinner"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="50dp"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/view3" />-->
+    <!--    <Spinner-->
+    <!--        android:id="@+id/view_config_font_spinner"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="50dp"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/view3" />-->
 
     <View
         android:id="@+id/view4"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:background="@color/grey_color"
+        android:tint="@color/grey_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_config_font_spinner" />
+        app:layout_constraintTop_toBottomOf="@+id/view3" />
 
     <ImageView
         android:id="@+id/view_config_iv_label_font_small"
@@ -95,35 +121,34 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:background="@color/grey_color"
-        app:layout_constraintBottom_toTopOf="@+id/buttonVertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_config_iv_label_font_small" />
 
-<!--    <com.folioreader.util.StyleableTextView-->
-<!--        android:id="@+id/buttonVertical"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="50dp"-->
-<!--        android:gravity="center"-->
-<!--        android:text="@string/direction_vertical"-->
-<!--        android:textSize="17sp"-->
-<!--        app:folio_font="@string/lato_font"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toStartOf="@+id/buttonHorizontal"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/view5" />-->
+    <!--    <com.folioreader.util.StyleableTextView-->
+    <!--        android:id="@+id/buttonVertical"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="50dp"-->
+    <!--        android:gravity="center"-->
+    <!--        android:text="@string/direction_vertical"-->
+    <!--        android:textSize="17sp"-->
+    <!--        app:folio_font="@string/lato_font"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toStartOf="@+id/buttonHorizontal"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/view5" />-->
 
-<!--    <com.folioreader.util.StyleableTextView-->
-<!--        android:id="@+id/buttonHorizontal"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="50dp"-->
-<!--        android:gravity="center"-->
-<!--        android:text="@string/direction_horizontal"-->
-<!--        android:textSize="17sp"-->
-<!--        app:folio_font="@string/lato_font"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toEndOf="@+id/buttonVertical"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/view5" />-->
+    <!--    <com.folioreader.util.StyleableTextView-->
+    <!--        android:id="@+id/buttonHorizontal"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="50dp"-->
+    <!--        android:gravity="center"-->
+    <!--        android:text="@string/direction_horizontal"-->
+    <!--        android:textSize="17sp"-->
+    <!--        app:folio_font="@string/lato_font"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toEndOf="@+id/buttonVertical"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/view5" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
