--- a/folioreader/res/menu/menu_main.xml
+++ b/folioreader/res/menu/menu_main.xml
@@ -25,6 +25,13 @@
         app:showAsAction="ifRoom"
         tools:showAsAction="always" />
 
+    <item
+        android:id="@+id/itemDrawer"
+        android:icon="@drawable/ic_drawer"
+        android:title="@string/menu_item_config"
+        app:showAsAction="ifRoom"
+        tools:showAsAction="always" />
+
 
 <!--    <item-->
 <!--        android:id="@+id/itemTts"-->
