--- a/folioreader/res/layout/fragment_highlight_list.xml
+++ b/folioreader/res/layout/fragment_highlight_list.xml
@@ -2,5 +2,7 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:id="@+id/rv_highlights"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    android:padding="10dp"
+     />
 
