--- a/folioreader/res/layout/row_bookmark.xml
+++ b/folioreader/res/layout/row_bookmark.xml
@@ -1,30 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="10dp">
+<!--    <LinearLayout-->
+<!--        android:id="@+id/bookmark_swipe_linear_layout"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="0dp">-->
 
-    <LinearLayout
-        android:id="@+id/bookmark_swipe_linear_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp">
-
-        <ImageView
-            android:id="@+id/iv_bookmark_delete"
-            android:layout_width="80dp"
-            android:layout_height="match_parent"
-            android:background="#FF3B30"
-            android:paddingLeft="25dp"
-            android:paddingRight="25dp"
-            android:src="@drawable/trash" />
-    </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/bookmark_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="8dp">
-
+<!--        <ImageView-->
+<!--            android:id="@+id/iv_bookmark_delete"-->
+<!--            android:layout_width="80dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:background="#FF3B30"-->
+<!--            android:paddingLeft="25dp"-->
+<!--            android:paddingRight="25dp"-->
+<!--            android:src="@drawable/trash" />-->
+<!--    </LinearLayout>-->
 
  <LinearLayout
      android:id="@+id/bookMark_Row"
@@ -49,16 +41,27 @@
             android:textSize="17sp" />
  </LinearLayout>
 
+        <RelativeLayout
+            android:layout_below="@+id/bookMark_Row"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="35dp"
+            android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/tv_bookmark_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="20 sep 2016"
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/bookMark_Row"
             android:textColor="@color/gray_text"
             android:textSize="14sp"
             android:textStyle="normal" />
 
-    </RelativeLayout>
-</com.daimajia.swipe.SwipeLayout>
+            <ImageView
+                android:id="@+id/iv_bookmark_delete"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:background="#FF3B30"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/trash" />
+        </RelativeLayout>
+</FrameLayout >
