added icons , enhc the view of bookmark iten and highlight item

--- a/folioreader/res/layout/row_bookmark.xml
+++ b/folioreader/res/layout/row_bookmark.xml
@@ -60,8 +60,7 @@
                 android:id="@+id/iv_bookmark_delete"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:background="#FF3B30"
                 android:layout_alignParentRight="true"
-                android:src="@drawable/trash" />
+                android:src="@drawable/delete" />
         </RelativeLayout>
 </FrameLayout >
