--- a/folioreader/res/layout/row_highlight.xml
+++ b/folioreader/res/layout/row_highlight.xml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:id="@+id/swipe_linear_layout"
-        android:layout_width="160dp"
-        android:layout_height="0dp">
+<!--    <LinearLayout-->
+<!--        android:id="@+id/swipe_linear_layout"-->
+<!--        android:layout_width="160dp"-->
+<!--        android:layout_height="0dp">-->
 
-        <ImageView
-            android:id="@+id/iv_edit_note"
-            android:layout_width="80dp"
-            android:layout_height="match_parent"
-            android:background="#8A2BE2"
-            android:paddingLeft="25dp"
-            android:paddingRight="25dp"
-            android:src="@drawable/edit_note" />
+<!--        <ImageView-->
+<!--            android:id="@+id/iv_edit_note"-->
+<!--            android:layout_width="80dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:background="#8A2BE2"-->
+<!--            android:paddingLeft="25dp"-->
+<!--            android:paddingRight="25dp"-->
+<!--            android:src="@drawable/edit_note" />-->
 
-        <ImageView
-            android:id="@+id/iv_delete"
-            android:layout_width="80dp"
-            android:layout_height="match_parent"
-            android:background="#FF3B30"
-            android:paddingLeft="25dp"
-            android:paddingRight="25dp"
-            android:src="@drawable/trash" />
-    </LinearLayout>
+<!--        <ImageView-->
+<!--            android:id="@+id/iv_delete"-->
+<!--            android:layout_width="80dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:background="#FF3B30"-->
+<!--            android:paddingLeft="25dp"-->
+<!--            android:paddingRight="25dp"-->
+<!--            android:src="@drawable/trash" />-->
+<!--    </LinearLayout>-->
 
     <RelativeLayout
         android:id="@+id/container"
@@ -87,14 +87,56 @@
             android:textColor="@color/day_underline_icon_fill_color_top"
             android:textSize="14sp" />
 
-        <TextView
-            android:id="@+id/tv_highlight_date"
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="20 sep 2016"
-            android:textColor="@color/gray_text"
-            android:textSize="14sp"
-            android:textStyle="normal"
-            android:layout_below="@+id/tv_note"/>
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:layout_below="@+id/tv_note">
+
+            <TextView
+                android:id="@+id/tv_highlight_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="20 sep 2016"
+                android:textColor="@color/gray_text"
+                android:textSize="14sp"
+                android:textStyle="normal"
+                />
+
+            <RelativeLayout
+                android:id="@+id/swipe_linear_layout"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true">
+
+               <LinearLayout
+                   android:layout_width="wrap_content"
+                   android:gravity="center"
+                   android:layout_height="wrap_content">
+                   <ImageView
+                       android:id="@+id/iv_edit_note"
+                       android:layout_width="24dp"
+                       android:layout_height="24dp"
+                       android:layout_marginEnd="10dp"
+                       android:src="@drawable/add_note" />
+
+                   <TextView
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:text="Add Note"
+                       android:textSize="14sp"/>
+               </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/iv_delete"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/delete" />
+            </RelativeLayout>
+
+        </RelativeLayout>
+
+
     </RelativeLayout>
-</com.daimajia.swipe.SwipeLayout>
+</FrameLayout>
