--- a/folioreader/res/drawable/note_edittext_background.xml
+++ b/folioreader/res/drawable/note_edittext_background.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?><!--  res/drawable/rounded_edittext.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="3dp" />
+    <corners android:radius="4dp" />
     <solid android:color="#FFFFFF" />
     <stroke
-        android:color="@color/highlight_blue"
-        android:width="2dp" />
+        android:color="@color/grey_color"
+        android:width="1dp" />
 </shape>
