rename the id of toolbar and appbar id as to resolve conflict

--- a/folioreader/res/layout/activity_search.xml
+++ b/folioreader/res/layout/activity_search.xml
@@ -22,7 +22,7 @@
         tools:listitem="@layout/item_search_normal" />
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayout"
+        android:id="@+id/search_appBarLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/search_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
             app:contentInsetLeft="0dp"
