added menu on tool bar, added visibility on menu item

--- a/folioreader/res/layout/folio_activity.xml
+++ b/folioreader/res/layout/folio_activity.xml
@@ -32,7 +32,8 @@
             android:layout_height="?android:attr/actionBarSize"
             app:contentInsetLeft="0dp"
             app:contentInsetStart="0dp"
-            app:contentInsetStartWithNavigation="0dp" />
+            app:contentInsetStartWithNavigation="0dp"
+            app:menu="@menu/menu_main"/>
 
     </com.folioreader.ui.view.FolioAppBarLayout>
 
